--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "bootstrap": "^5.2.3",
+    "eventsource": "^2.0.2",
+    "laravel-echo": "^1.15.1",
+    "pusher-js": "^8.0.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
